WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
256671
[ iOS ] imported/w3c/web-platform-tests/screen-orientation/fullscreen-interactions.html is a flaky failure
https://bugs.webkit.org/show_bug.cgi?id=256671
Summary
[ iOS ] imported/w3c/web-platform-tests/screen-orientation/fullscreen-interac...
Ryosuke Niwa
Reported
2023-05-11 16:10:19 PDT
This test fails intermittently on iOS with the following diff: --- /Volumes/Data/worker/Apple-iOS-16-Simulator-Release-WK2-Tests/build/layout-test-results/imported/w3c/web-platform-tests/screen-orientation/fullscreen-interactions-expected.txt +++ /Volumes/Data/worker/Apple-iOS-16-Simulator-Release-WK2-Tests/build/layout-test-results/imported/w3c/web-platform-tests/screen-orientation/fullscreen-interactions-actual.txt @@ -1,5 +1,5 @@ -FAIL Fully unlocking the screen orientation causes a pending lock to be aborted assert_unreached: Should have rejected: undefined Reached unreachable code -FAIL Fully unlocking the screen orientation causes a pending lock in a nested browsing context to be aborted promise_rejects_dom: function "function () { throw e }" threw object "SecurityError: Locking the screen orientation is only allowed when in fullscreen" that is not a DOMException AbortError: property "code" is equal to 18, expected 20 +FAIL Fully unlocking the screen orientation causes a pending lock to be aborted promise_test: Unhandled rejection with value: object "TypeError: Type error" +FAIL Fully unlocking the screen orientation causes a pending lock in a nested browsing context to be aborted promise_test: Unhandled rejection with value: object "TypeError: Type error"
https://results.webkit.org/?suite=layout-tests&test=imported%2Fw3c%2Fweb-platform-tests%2Fscreen-orientation%2Ffullscreen-interactions.html
Attachments
Add attachment
proposed patch, testcase, etc.
Marcos Caceres
Comment 1
2023-05-11 17:06:30 PDT
I'll take a look either today or early next week.
Radar WebKit Bug Importer
Comment 2
2023-05-18 16:11:20 PDT
<
rdar://problem/109537056
>
Marcos Caceres
Comment 3
2023-05-25 21:45:04 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/14381
EWS
Comment 4
2023-06-02 06:53:01 PDT
Committed
264830@main
(81ceb06a3201): <
https://commits.webkit.org/264830@main
> Reviewed commits have been landed. Closing PR #14381 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug