[ iOS ] imported/w3c/web-platform-tests/screen-orientation/fullscreen-interactions.html is a flaky failure https://bugs.webkit.org/show_bug.cgi?id=256671 rdar://109537056

Reviewed by NOBODY (OOPS!).

Fixed a number of flaky/not-so-well-written tests so they no longer fail on iOS.

Implemented support for aborting the orientation pending promise when exiting fullscreen.

* LayoutTests/imported/w3c/web-platform-tests/screen-orientation/lock-sandboxed-iframe-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/screen-orientation/lock-sandboxed-iframe.html:
* LayoutTests/imported/w3c/web-platform-tests/screen-orientation/lock-unlock-check.html:
* LayoutTests/imported/w3c/web-platform-tests/screen-orientation/nested-documents-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/screen-orientation/nested-documents.html:
* LayoutTests/imported/w3c/web-platform-tests/screen-orientation/onchange-event-subframe-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/screen-orientation/onchange-event-subframe.html:
* LayoutTests/imported/w3c/web-platform-tests/screen-orientation/resources/nav_iframe.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/screen-orientation/resources/orientation-utils.js:
(export.async attachIframe):
* LayoutTests/imported/w3c/web-platform-tests/screen-orientation/unlock-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/screen-orientation/unlock.html:
* LayoutTests/platform/ios-wk2/TestExpectations:
* LayoutTests/platform/ios/TestExpectations:
* LayoutTests/platform/ios/imported/w3c/web-platform-tests/screen-orientation/lock-sandboxed-iframe-expected.txt:
* LayoutTests/platform/ios/imported/w3c/web-platform-tests/screen-orientation/nested-documents-expected.txt:
* LayoutTests/platform/ios/imported/w3c/web-platform-tests/screen-orientation/onchange-event-subframe-expected.txt:
* LayoutTests/platform/ios/imported/w3c/web-platform-tests/screen-orientation/unlock-expected.txt:
* LayoutTests/platform/mac-wk2/TestExpectations:
* Source/WebCore/dom/FullscreenManager.cpp:
(WebCore::FullscreenManager::exitFullscreen):
(WebCore::FullscreenManager::logChannel const):
* Source/WebCore/page/ScreenOrientation.cpp:
(WebCore::ScreenOrientation::lock):